--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,23 @@
-/*body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+h1,
+h2 {
+  text-align: center;
+  padding: 1rem 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+p {
+  text-align: center;
 }
-*/
+
+label {
+  font-size: 1.1rem;
+}
+
+input {
+  margin-bottom: 1rem;
+}
+
+button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
