--- a/client/src/pages/HomePage/HomePage.module.css
+++ b/client/src/pages/HomePage/HomePage.module.css
@@ -1,3 +1,13 @@
 .homeSection {
   margin: 1rem auto 2rem;
 }
+
+.font {
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.searchBar {
+  border-radius: 30px;
+  padding: 30px;
+  font-size: 1.25rem;
+}
