--- a/client/src/commonStyles/Form.module.css
+++ b/client/src/commonStyles/Form.module.css
@@ -8,3 +8,8 @@
   justify-content: center;
   align-items: center;
 }
+
+label {
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 20px !important;
+}
