--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -12,7 +12,8 @@ nav {
 
 @media screen and (min-width: 768px) {
   button.logOutButton {
-    margin-top: 0.25rem;
+    margin-top: 0.5rem;
     margin-left: 0.5rem;
+    font-size: 20px;
   }
 }
