--- a/client/src/pages/Preferences/Preferences.module.css
+++ b/client/src/pages/Preferences/Preferences.module.css
@@ -19,8 +19,19 @@
 }
 
 .preferenceSection button {
-  font-size: 15px;
-  margin-top: 0.75rem;
-  padding: 10px;
+  background-color: black;
+  font-family: 'Josefin Sans', sans-serif;
+  margin-top: 1rem;
   width: fit-content;
+  transition-duration: 0.4s;
+  border: none;
+}
+
+.preferenceSection button:not(.disabled):active, .preferenceSection button:active, .preferenceSection button:hover, .preferenceSection button:focus {
+  background-color: gray;
+}
+
+.preferenceSection button:disabled {
+  background-color: rgb(0, 0, 0, 0.8);
+  font-family: 'Josefin Sans', sans-serif;
 }
