--- a/client/src/components/RecipeCard/RecipeCard.module.css
+++ b/client/src/components/RecipeCard/RecipeCard.module.css
@@ -34,9 +34,11 @@ button {
   transition-duration: 0.4s;
 }
 
-.btnCustom:active, .btnCustom:focus, .btnCustom:hover {
+.btnCustom:active,
+.btnCustom:focus,
+.btnCustom:hover {
   background-color: gray;
-} 
+}
 
 @media screen and (min-width: 768px) {
   .recipeCard {
