--- a/client/src/components/RecipeCard/RecipeCard.module.css
+++ b/client/src/components/RecipeCard/RecipeCard.module.css
@@ -21,23 +21,25 @@
 
 .cardText {
   flex-basis: 25%;
+  font-family: 'Josefin Sans', sans-serif;
+  text-transform: lowercase;
 }
 
 button {
   font-family: 'Josefin Sans', sans-serif;
-  transition-duration: 0.4s;
+  transition-duration: 0.3s;
 }
 
 .btnCustom {
   background-color: black;
   border: none;
-  transition-duration: 0.4s;
+  transition-duration: 0.3s;
 }
 
 .btnCustom:active,
 .btnCustom:focus,
 .btnCustom:hover {
-  background-color: gray;
+  background-color: #5cb85c;
 }
 
 @media screen and (min-width: 768px) {
