--- a/client/src/pages/Preferences/Preferences.module.css
+++ b/client/src/pages/Preferences/Preferences.module.css
@@ -23,7 +23,7 @@
   font-family: 'Josefin Sans', sans-serif;
   margin-top: 1rem;
   width: fit-content;
-  transition-duration: 0.4s;
+  transition-duration: 0.3s;
   border: none;
 }
 
@@ -31,7 +31,7 @@
 .preferenceSection button:active,
 .preferenceSection button:hover,
 .preferenceSection button:focus {
-  background-color: gray;
+  background-color: #5cb85c;
 }
 
 .preferenceSection button:disabled {
